# feathertail

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: build.yml  publish.yml  release.yml  test.yml
docs/: Makefile  advanced_usage.md  conf.py  getting_started.md  index.rst
docs/api/: index.rst  tinyframe.rst
docs/tutorials/: 01_basics.md  index.md
feathertail/: __init__.py
notebooks/: feathertail_basics.ipynb  feathertail_col_example.ipynb  feathertail_groupby.ipynb  feathertail_iter_example.ipynb  feathertail_mixed_types.ipynb
plans/: CROSS_PLATFORM_SIMD_PLAN.md
scripts/: setup_dev.sh
src/: groupby.rs  join.rs  lib.rs  utils.rs
src/benchmarks/: mod.rs
src/chunked/: mod.rs
src/column/: iter.rs  mod.rs
src/debug/: mod.rs
src/frame/: cast.rs  convert.rs  edit.rs  fillna.rs  iter.rs  lazy.rs  manage.rs  mod.rs  optimize.rs  string_optimize.rs
src/joins/: mod.rs
src/logging/: mod.rs
src/parallel/: mod.rs
src/profiling/: mod.rs
src/ranking/: mod.rs
src/simd/: arm64_simd.rs  benchmarks.rs  cpu_features.rs  integration_tests.rs  mod.rs  property_tests.rs  scalar_fallback.rs  tests.rs  x86_64_simd.rs
src/stats/: correlation.rs  descriptive.rs  mod.rs
src/string/: mod.rs
src/timeseries/: mod.rs
src/types/: mod.rs
src/validation/: mod.rs
src/window/: mod.rs
tests/python/: conftest.py
tests/python/unit/: test_analytics.py  test_developer_experience.py  test_filtering.py  test_groupby.py  test_joins.py  test_ranking.py  test_string.py  test_timeseries.py  test_tinyframe.py  test_validation.py  test_window.py
tests/unit/: column_tests.rs  convert_tests.rs
