[package]
name = "feathertail"
version = "0.5.0"
edition = "2021"
description = "A tiny, fast, Rust-backed transformation core for Python table data"
authors = ["Odos Matthews odosmatthews@gmail.com"]
license = "MIT"

[features]
default = ["no-simd"]
simd = []
no-simd = []
avx2 = ["simd"]
neon = ["simd"]

[lib]
name = "feathertail"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde_json = "1.0"
rayon = "1.8"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
log = "0.4"
lazy_static = "1.4"
regex = "1.10"


[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
tempfile = "3.0"
