[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "feathertail"

[project]
name = "feathertail"
version = "0.4.1"
description = "A tiny, fast, Rust-backed transformation core for Python table data"
authors = [{ name = "Odos Matthews", email = "odosmatthews@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
